--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello, world
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<title>My Resume</title>
+<meta name="viewport" content="width=device-width; initial-scale=1">
+<style>
+body {
+	background : #008C8A none repeat scroll 0% 0%;
+	color : white;
+}
+</style>
+
+Hello world
