--- a/index.html
+++ b/index.html
@@ -9,4 +9,8 @@ body {
 }
 </style>
 
-Hello world
+<frameset rows="100%,*" border="0">
+  <frame src="http://spurrya.github.io/" frameborder="0" />
+  <frame frameborder="0" noresize />
+</frameset>
+
